--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.demo.spring</groupId>
-	<artifactId>jwt2</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>SpringBootOAuth2</artifactId>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>jwt2</name>
