--- a/pom.xml
+++ b/pom.xml
@@ -63,11 +63,11 @@
 			<version>2.1.0.RELEASE</version>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.8.11.3</version>
-		</dependency>
+			<version>2.9.9</version>
+		</dependency> -->
 
 		<dependency>
 			<groupId>net.sf.flexjson</groupId>
